tests/machine/x/go/left_join_multi.go
//go:build ignore

// Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z

package main

import (
	"fmt"
	"sort"
)

type Customer struct {
	ID   int    `json:"id"`
	Name string `json:"name"`
}

type Item struct {
	OrderID int    `json:"orderId"`
	Sku     string `json:"sku"`
}

type Order struct {
	ID         int `json:"id"`
	CustomerID int `json:"customerId"`
}

type Result struct {
	OrderID int    `json:"orderId"`
	Name    string `json:"name"`
	Item    Item   `json:"item"`
}

type v = Result

func main() {
	customers := []Customer{Customer{
		ID:   1,
		Name: "Alice",
	}, Customer{
		ID:   2,
		Name: "Bob",
	}}
	orders := []Order{Order{
		ID:         100,
		CustomerID: 1,
	}, Order{
		ID:         101,
		CustomerID: 2,
	}}
	items := []Item{Item{
		OrderID: 100,
		Sku:     "a",
	}}
	result := func() []Result {
		src := _toAnySlice(orders)
		resAny := _query(src, []_joinSpec{
			{items: _toAnySlice(customers), on: func(_a ...any) bool {
				tmp0 := _a[0]
				var o Order
				if tmp0 != nil {
					o = tmp0.(Order)
				}
				_ = o
				tmp1 := _a[1]
				var c Customer
				if tmp1 != nil {
					c = tmp1.(Customer)
				}
				_ = c
				return (o.CustomerID == c.ID)
			}, leftKey: func(_a ...any) any {
				tmp0 := _a[0]
				var o Order
				if tmp0 != nil {
					o = tmp0.(Order)
				}
				_ = o
				return o.CustomerID
			}, rightKey: func(_v any) any { c := _v.(Customer); _ = c; return c.ID }},
			{items: _toAnySlice(items), on: func(_a ...any) bool {
				tmp0 := _a[0]
				var o Order
				if tmp0 != nil {
					o = tmp0.(Order)
				}
				_ = o
				tmp1 := _a[1]
				var c Customer
				if tmp1 != nil {
					c = tmp1.(Customer)
				}
				_ = c
				tmp2 := _a[2]
				var i Item
				if tmp2 != nil {
					i = tmp2.(Item)
				}
				_ = i
				return (o.ID == i.OrderID)
			}, leftKey: func(_a ...any) any {
				tmp0 := _a[0]
				var o Order
				if tmp0 != nil {
					o = tmp0.(Order)
				}
				_ = o
				tmp1 := _a[1]
				var c Customer
				if tmp1 != nil {
					c = tmp1.(Customer)
				}
				_ = c
				return o.ID
			}, rightKey: func(_v any) any { i := _v.(Item); _ = i; return i.OrderID }, left: true},
		}, _queryOpts{selectFn: func(_a ...any) any {
			tmp0 := _a[0]
			var o Order
			if tmp0 != nil {
				o = tmp0.(Order)
			}
			_ = o
			tmp1 := _a[1]
			var c Customer
			if tmp1 != nil {
				c = tmp1.(Customer)
			}
			_ = c
			tmp2 := _a[2]
			var i Item
			if tmp2 != nil {
				i = tmp2.(Item)
			}
			_ = i
			return Result{
				OrderID: o.ID,
				Name:    c.Name,
				Item:    i,
			}
		}, skip: -1, take: -1})
		out := make([]Result, len(resAny))
		for i, v := range resAny {
			out[i] = v.(Result)
		}
		return out
	}()
	fmt.Println("--- Left Join Multi ---")
	for _, r := range result {
		fmt.Println(r.OrderID, r.Name, r.Item)
	}
}

type _joinSpec struct {
	items    []any
	on       func(...any) bool
	leftKey  func(...any) any
	rightKey func(any) any
	left     bool
	right    bool
}
type _queryOpts struct {
	selectFn func(...any) any
	where    func(...any) bool
	sortKey  func(...any) any
	skip     int
	take     int
}

func _query(src []any, joins []_joinSpec, opts _queryOpts) []any {
	items := make([][]any, len(src))
	for i, v := range src {
		items[i] = []any{v}
	}
	for _, j := range joins {
		if j.leftKey != nil && j.rightKey != nil {
			if j.right && !j.left {
				lmap := map[string][]int{}
				for li, l := range items {
					key := fmt.Sprint(j.leftKey(l...))
					lmap[key] = append(lmap[key], li)
				}
				joined := [][]any{}
				for _, right := range j.items {
					key := fmt.Sprint(j.rightKey(right))
					if is, ok := lmap[key]; ok {
						for _, li := range is {
							left := items[li]
							keep := true
							if j.on != nil {
								args := append(append([]any(nil), left...), right)
								keep = j.on(args...)
							}
							if !keep {
								continue
							}
							joined = append(joined, append(append([]any(nil), left...), right))
						}
					} else {
						undef := make([]any, len(items[0]))
						joined = append(joined, append(undef, right))
					}
				}
				items = joined
				continue
			}
			rmap := map[string][]int{}
			for ri, r := range j.items {
				key := fmt.Sprint(j.rightKey(r))
				rmap[key] = append(rmap[key], ri)
			}
			joined := [][]any{}
			matched := make([]bool, len(j.items))
			for _, left := range items {
				key := fmt.Sprint(j.leftKey(left...))
				if is, ok := rmap[key]; ok {
					m := false
					for _, ri := range is {
						right := j.items[ri]
						keep := true
						if j.on != nil {
							args := append(append([]any(nil), left...), right)
							keep = j.on(args...)
						}
						if !keep {
							continue
						}
						m = true
						matched[ri] = true
						joined = append(joined, append(append([]any(nil), left...), right))
					}
					if j.left && !m {
						joined = append(joined, append(append([]any(nil), left...), nil))
					}
				} else if j.left {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
			if j.right {
				lw := 0
				if len(items) > 0 {
					lw = len(items[0])
				}
				for ri, right := range j.items {
					if !matched[ri] {
						undef := make([]any, lw)
						joined = append(joined, append(undef, right))
					}
				}
			}
			items = joined
			continue
		}
		joined := [][]any{}
		if j.right && j.left {
			matched := make([]bool, len(j.items))
			for _, left := range items {
				m := false
				for ri, right := range j.items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					matched[ri] = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if !m {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
			for ri, right := range j.items {
				if !matched[ri] {
					undef := make([]any, len(items[0]))
					joined = append(joined, append(undef, right))
				}
			}
		} else if j.right {
			for _, right := range j.items {
				m := false
				for _, left := range items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if !m {
					undef := make([]any, len(items[0]))
					joined = append(joined, append(undef, right))
				}
			}
		} else {
			for _, left := range items {
				m := false
				for _, right := range j.items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if j.left && !m {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
		}
		items = joined
	}
	if opts.where != nil {
		filtered := [][]any{}
		for _, r := range items {
			if opts.where(r...) {
				filtered = append(filtered, r)
			}
		}
		items = filtered
	}
	if opts.sortKey != nil {
		type pair struct {
			item []any
			key  any
		}
		pairs := make([]pair, len(items))
		for i, it := range items {
			pairs[i] = pair{it, opts.sortKey(it...)}
		}
		sort.Slice(pairs, func(i, j int) bool {
			a, b := pairs[i].key, pairs[j].key
			switch av := a.(type) {
			case int:
				switch bv := b.(type) {
				case int:
					return av < bv
				case float64:
					return float64(av) < bv
				}
			case float64:
				switch bv := b.(type) {
				case int:
					return av < float64(bv)
				case float64:
					return av < bv
				}
			case string:
				bs, _ := b.(string)
				return av < bs
			}
			return fmt.Sprint(a) < fmt.Sprint(b)
		})
		for i, p := range pairs {
			items[i] = p.item
		}
	}
	if opts.skip >= 0 {
		if opts.skip < len(items) {
			items = items[opts.skip:]
		} else {
			items = [][]any{}
		}
	}
	if opts.take >= 0 {
		if opts.take < len(items) {
			items = items[:opts.take]
		}
	}
	res := make([]any, len(items))
	for i, r := range items {
		res[i] = opts.selectFn(r...)
	}
	return res
}

func _toAnySlice[T any](s []T) []any {
	out := make([]any, len(s))
	for i, v := range s {
		out[i] = v
	}
	return out
}
